--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,9 +1,20 @@
 
 .nav {
-  display: flex;
   align-items: center;
+  display: flex;
+  font-size: 1.25rem;
+  font-weight: bold;
+  justify-content: flex-end;
+  padding: 1rem;
 }
 
 .nav a {
-  margin-right: 2rem;
+  display: flex;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 2rem;
 }
