--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,15 @@
 html {
-  background-color: lavenderblush;
+  background-image: url("../../static/background.svg");
+  background-attachment: fixed;
+  background-size: cover;
+  font-family: Courier new;
+}
+
+body {
+  color: black;
+  margin: 0;
+}
+
+a:visited {
+  color: unset;
 }
